--- a/op/list.ini
+++ b/op/list.ini
@@ -1,7 +1,7 @@
 [custom]
 
 
-ruleset=🍃 拦截净化,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/adg.list
+ruleset=🍃 拦截净化,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/adgh/adg.list
 ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/LocalAreaNetwork.list
 ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/UnBan.list
 ruleset=🍃 拦截净化,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/httpdns.list
