--- a/op/list.ini
+++ b/op/list.ini
@@ -25,7 +25,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(流量|剩余|长期|重置|倒卖|频道)).*)`http://www.gstatic.com/generate_204`180,,50
 custom_proxy_group=🍋 负责稳定`url-test`(稳定|Hy2|vmess)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🍑 负责临时`url-test`(^(?!.*(稳定|HK 03|HK 04|SG 03|SG 04)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🍑 负责临时`url-test`(^(?!.*(稳定|CF)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🐸 报鸟的哇`select`[]🍋 负责稳定`[]🍑 负责临时`[]♻️ 自动选择`[]👻 港台`[]👺 日韩`[]🤖 美国`[]👹 新加印`[]🚀 手动切换
 custom_proxy_group=🎥 油管视频`select`[]🍋 负责稳定`[]🍑 负责临时`[]♻️ 自动选择`[]👻 港台`[]👺 日韩`[]🤖 美国`[]👹 新加印`[]🚀 手动切换
 custom_proxy_group=🐟 漏网之鱼`select`[]🍋 负责稳定`[]🍑 负责临时`[]♻️ 自动选择`[]👻 港台`[]👺 日韩`[]🤖 美国`[]👹 新加印`[]🚀 手动切换`[]🐳 全球直连
