--- a/op/list.ini
+++ b/op/list.ini
@@ -41,4 +41,5 @@ custom_proxy_group=👹 新加印`url-test`(新加坡|SG|加拿大|印度)`http:
 enable_rule_generator=true
 overwrite_original_rules=true
 
-clash_rule_base=https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/adgh/clash_adg_base.yml
+#clash_rule_base=https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/adgh/clash_adg_base.yml
+clash_rule_base=https://testingcf.jsdelivr.net/gh/lztxi/ADH@main/op/adgh/clash_adg_base.yml
