--- a/op/rule/iptvA.yaml
+++ b/op/rule/iptvA.yaml
@@ -28,3 +28,5 @@ payload:
   - DOMAIN-SUFFIX,王二小放牛娃.top
   - DOMAIN-SUFFIX,王二小放牛娃.xyz
   - DOMAIN-SUFFIX,999888987.xyz
+  - DOMAIN-SUFFIX,mogg.top
+  - DOMAIN-SUFFIX,mogg.小胡.top
