--- a/op/list.ini
+++ b/op/list.ini
@@ -3,7 +3,6 @@
 
 ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/LocalAreaNetwork.list
 ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/UnBan.list
-ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/d.list
 ruleset=🍃 拦截净化,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/httpdns.list
 ruleset=🍃 拦截净化,https://gcore.jsdelivr.net/gh/VirgilClyne/GetSomeFries@main/ruleset/HTTPDNS.Block.list
 ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/iptvA.list
@@ -41,5 +40,4 @@ custom_proxy_group=👹 新加印`url-test`(新加坡|SG|加拿大|印度)`http:
 enable_rule_generator=true
 overwrite_original_rules=true
 
-#clash_rule_base=https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/adgh/clash_adg_base.yml
-clash_rule_base=https://testingcf.jsdelivr.net/gh/lztxi/ADH@main/op/adgh/clash_adg_base.yml
+clash_rule_base=https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/adgh/clash_adg_base.yml
