--- a/op/list.ini
+++ b/op/list.ini
@@ -4,7 +4,7 @@
 ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/LocalAreaNetwork.list
 ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/UnBan.list
 ruleset=🍃 拦截净化,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/httpdns.list
-#ruleset=🍃 拦截净化,https://gcore.jsdelivr.net/gh/VirgilClyne/GetSomeFries@main/ruleset/HTTPDNS.Block.list
+ruleset=🍃 拦截净化,https://gcore.jsdelivr.net/gh/VirgilClyne/GetSomeFries@main/ruleset/HTTPDNS.Block.list
 ruleset=🐳 全球直连,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/iptvA.list
 ruleset=🐟 漏网之鱼,https://gcore.jsdelivr.net/gh/lztxi/ADH@main/op/rule/iptvB.list
 ruleset=🚚 万年直连,https://gcore.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft.list
