--- a/op/rule/httpdns.yaml
+++ b/op/rule/httpdns.yaml
@@ -4,3 +4,4 @@ payload:
 - IP-CIDR,119.28.28.98/32,no-resolve
 - IP-CIDR,203.119.169.0/24,no-resolve
 - DOMAIN-KEYWORD,appdownload.alicdn.com,no-resolve
+- DOMAIN-KEYWORD,data.bilibili.com,no-resolve
