--- a/.github/workflows/build-ADH-AD.yml
+++ b/.github/workflows/build-ADH-AD.yml
@@ -55,14 +55,16 @@ jobs:
       - name: Commit & Push to release
         if: env.DRY_RUN != 'true'
         working-directory: release
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git checkout -B release || true
+          git checkout release || git checkout -b release
           git add .
-          git diff --cached --quiet && echo "No changes to commit" && exit 0
-          git commit -m "auto: update rules - $(date +'%Y-%m-%d %H:%M UTC')"
-          git push
+          git diff --cached --quiet && echo "No changes to commit, skipping" && exit 0
+          git commit -m "auto: update rules $(date +'%Y-%m-%d %H:%M UTC')"
+          git push origin release
 
   cleanup:
     needs: build
