--- a/.github/workflows/build-ADH-AD.yml
+++ b/.github/workflows/build-ADH-AD.yml
@@ -1,7 +1,8 @@
 name: ADH-广告订阅合并
 
 permissions:
-  contents: write      # 新增这一行，允许 GITHUB_TOKEN 推送代码
+  contents: write
+  actions: write
 
 on:
   schedule:
@@ -38,7 +39,6 @@ jobs:
           ref: release
           path: release
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}          # ← 这里加上 token 解决 403
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -48,12 +48,21 @@ jobs:
       - name: Install dependencies
         run: pip install requests pyyaml
 
+      - name: Clean release directory (Force remove all old files)
+        working-directory: release
+        run: |
+          # 这一步是关键：物理删除 release 目录下除 .git 外的所有内容
+          # -mindepth 1 确保不删除当前目录 .
+          # ! -path './.git' 确保保留 git 版本记录
+          # -exec rm -rf {} + 强制递归删除
+          find . -mindepth 1 ! -path './.git' -exec rm -rf '{}' +
+
       - name: Build rules
         env:
           OUTPUT_DIR: ${{ github.workspace }}/release
         run: |
           cd main
-          python scripts/merge.py
+          python scripts/ADH-AD.py
 
       - name: Commit & Push to release
         if: env.DRY_RUN != 'true'
@@ -64,16 +73,17 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           
-          # 显式设置 remote URL 带 token（强制使用认证）
           git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
           
           git checkout release || git checkout -b release
-          git add .
+          
+          # 使用 git add -A 来暂存所有变更（包括旧文件的删除和新文件的添加）
+          git add -A
+          
           git diff --cached --quiet && echo "No changes to commit, skipping" && exit 0
           
           git commit -m "auto: update rules $(date +'%Y-%m-%d %H:%M UTC')"
           
-          # 用 token 认证 push
           git push origin release
 
   cleanup:
