--- a/.github/workflows/build-ADH-AD.yml
+++ b/.github/workflows/build-ADH-AD.yml
@@ -48,14 +48,20 @@ jobs:
       - name: Install dependencies
         run: pip install requests pyyaml
 
-      - name: Clean release directory (Force remove all old files)
-        working-directory: release
+      - name: Clean release directory
         run: |
-          # 这一步是关键：物理删除 release 目录下除 .git 外的所有内容
-          # -mindepth 1 确保不删除当前目录 .
-          # ! -path './.git' 确保保留 git 版本记录
-          # -exec rm -rf {} + 强制递归删除
+          # 👇 这里使用绝对路径，强制进入 release 目录，防止误删
+          cd "${{ github.workspace }}/release"
+          
+          # 🔒 安全检查：如果当前目录不是 git 仓库，说明有问题，直接报错
+          if [ ! -d .git ]; then
+             echo "❌ 错误：找不到 .git 文件夹，说明 release 分支 checkout 失败。"
+             exit 1
+          fi
+          
+          # 清理：删除当前目录下所有文件，唯独保留 .git
           find . -mindepth 1 ! -path './.git' -exec rm -rf '{}' +
+          echo "✔ Release 目录清理完成"
 
       - name: Build rules
         env:
@@ -77,9 +83,10 @@ jobs:
           
           git checkout release || git checkout -b release
           
-          # 使用 git add -A 来暂存所有变更（包括旧文件的删除和新文件的添加）
+          # 暂存所有变更（包括删除和新增）
           git add -A
           
+          # 如果没有变更则退出
           git diff --cached --quiet && echo "No changes to commit, skipping" && exit 0
           
           git commit -m "auto: update rules $(date +'%Y-%m-%d %H:%M UTC')"
