--- a/.github/workflows/ADH-DNS.yml
+++ b/.github/workflows/ADH-DNS.yml
@@ -6,7 +6,8 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write   # 必须加这个，避免 push 403
+  contents: write
+  actions: write
 
 jobs:
   generate:
@@ -15,18 +16,34 @@ jobs:
       - name: Checkout main 分支
         uses: actions/checkout@v4
         with:
-          ref: main       # 确保从 main 拉代码运行脚本
+          ref: main
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.12'   # 你可以改回 3.11 如果需要
+          python-version: '3.12'
 
       - name: Install dependencies
         run: pip install -r scripts/requirements.txt
 
       - name: 生成 adguard_dns.txt 和 README.md
         run: python scripts/ADGH_dns.py
+
+      # --- 新增：提交统计文件到 main 分支 ---
+      - name: Commit stats to main branch
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          
+          if [ -f config/ADGH_dns_stats.json ]; then
+            git add config/ADGH_dns_stats.json
+            git diff --cached --quiet || git commit -m "chore: update DNS stats $(date -u +'%Y-%m-%d %H:%M UTC')"
+            git push origin main
+            echo "✔ Stats file committed to main branch."
+          else
+            echo "⚠️ Stats file not found, skipping commit."
+          fi
+      # --------------------------------------
 
       - name: 推送生成文件到 dev 分支（干净 orphan 方式）
         run: |
@@ -56,10 +73,9 @@ jobs:
 
           echo "dev 分支已更新！现在只包含 adguard_dns.txt 和 README.md～"
 
-      # 可选：清理旧的 workflow 运行记录，保持列表干净
       - name: Delete old workflow runs
-        if: always()   # 即使前面失败也执行
+        if: always()
         uses: Mattraks/delete-workflow-runs@v2
         with:
-          retain_days: 7          # 保留最近7天（可改0只留最新）
-          keep_minimum_runs: 3    # 至少保留3次运行记录
+          retain_days: 7
+          keep_minimum_runs: 3
